--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "weui": "^0.4.3",
-    "react": "^15.2.1"
+    "react": "^15.2.1",
+    "vue": "^1.0.26"
   }
 }
