--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
         "node_modules"
     ],
     "files": [
-        "./typings/index.d.ts",
-        "./app/js/index.tsx"
+        "./app/js/app.ts"
     ]
 }
